--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client-cli",
   "version": "1.0.0",
   "description": "",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.cjs.js",
@@ -9,9 +10,8 @@
     "build": "rollup -c",
     "lint": "eslint ./src --ext .vue,.js,.ts,.cjs,.mjs"
   },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
+    "chalk": "^5.3.0",
     "citty": "^0.1.6",
     "consola": "^3.2.3"
   },
