--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npx client-cli",
     "dev": "rollup -c --watch",
     "build": "rollup -c",
-    "lint": "eslint ./src --ext .vue,.js,.ts,.cjs,.mjs"
+    "lint": "eslint ./src/index.ts"
   },
   "dependencies": {
     "chalk": "^5.3.0",
