--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@bit-ship/cli",
+  "type": "module",
   "public": true,
   "version": "0.0.1",
   "description": "Bitship CLI",
   "main": "index.js",
   "bin": {
-    "client-cli": "bin/bin.js"
+    "@bit-ship/cli": "bin/bin.js"
   },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "start": "npx client-cli",
+    "start": "node ./dist/apps/client-cli/src/index.js",
     "dev": "rollup -c --watch",
     "build": "rollup -c",
     "lint": "eslint ./src --ext .vue,.js,.ts,.cjs,.mjs"
@@ -19,7 +20,8 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "citty": "^0.1.6",
-    "consola": "^3.2.3"
+    "consola": "^3.2.3",
+    "mkdist": "^1.5.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
